server/static/style.css
h1 {
    background-color: red;
}

a {
    padding: 7px;
    border-radius: 10px;
}

.sub {
    background-color: lightcoral;
}

.local {
    background-color: lightgreen;
}

.inline {
    display: inline;
    padding: 0px;
}

p.note {
    display: inline;
    margin-bottom: 0px;
    margin-left: 0px;
}

span.note {
    width: 40%;
    display: inline-block;
    padding-left: 10px;
}

html div {
    padding: 13px 7px;
    display: flex;
    align-items: start;
}

h2 {
    margin-bottom: 0px;
}

footer {
    position: fixed;
    left: 0;
    bottom: 0;
    width: 100%;
}

footer div {
    width: 100%;
    padding: 10px;
}

